Add deleteMeeting function
